--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "history": "^5.0.0",
     "immer": "^9.0.1",
     "polished": "^4.1.1",
     "react": "^17.0.2",
