--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
   },
   "devDependencies": {
     "eslint": "^7.24.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "json-server": "^0.16.3",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.3",
